--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-appwrite": "^0.5.0",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "tailwindcss": "^3.4.17",
-    "expo-system-ui": "~4.0.6"
+    "react-native-url-polyfill": "^2.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
