--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~52.0.23",
+    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
@@ -18,6 +19,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
