--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "expo": "~52.0.23",
-    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-video": "^2.0.3",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
