--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.23",
+    "expo": "~52.0.26",
     "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-video": "^2.0.3",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-video": "~2.0.5",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-reanimated": "^3.16.6",
@@ -26,8 +26,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.17",
-    "expo-document-picker": "~13.0.1",
-    "expo-image-picker": "~16.0.3"
+    "expo-document-picker": "~13.0.2",
+    "expo-image-picker": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
